--- a/src/more/more.html
+++ b/src/more/more.html
@@ -1,3 +1,19 @@
+<!-------------------------------------------------------------------------
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
+ *
+ * IDENTIFICATION
+ *     more/more.html
+ *
+ * This file is part of search2 project
+ * more.html is the HTML frame for search2 bar's more color box
+ *
+ *------------------------------------------------------------------------->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,26 +27,26 @@
 	<table id="search2_more">
 	<tbody>
 		<tr>
-			<td colspan="9999">
+			<td>
 				<input type="text" id="search2_more_searchInput" />
 			</td>
 		</tr>
 	</tbody>
 	<tbody id ="search2_more_moreinput">
 		<tr>
-			<td colspan="2">
+			<td>
 				<div>
 				<input type="checkbox" id="search2_more_newwindow" class="bcheckbox" checked="true" />
 				<label for="newWindow" id="__more_newwindow"><label>
 				</div>
 			</td>
-			<td colspan="2">
+			<td>
 				<div>
 				<input type="checkbox" id="search2_more_autoclose" class="bcheckbox" checked="true" />
 				<label for="autoclose" id="__more_autoclose"><label>
 				</div>
 			</td>
-			<td colspan="9999"><div id="search2_more_remember"></div></td>
+			<td><div id="search2_more_remember"></div></td>
 		</tr>
 	</tbody>
 	<tbody id ="search2_more_morelist"></tbody>
