--- a/src/bg/evtpage.html
+++ b/src/bg/evtpage.html
@@ -1,3 +1,19 @@
+<!-------------------------------------------------------------------------
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * Copyright (c) 2014-2015, wurenny@gmail.com, All rights reserved
+ *
+ * IDENTIFICATION
+ *     bg/evtpage.html
+ *
+ * This file is part of search2 project
+ * evtpage is the background checkview page for search2
+ *
+ *------------------------------------------------------------------------->
+
 <!doctype html>
 <html lang="en">
 <head>
