--- a/src/bg/evtpage.html
+++ b/src/bg/evtpage.html
@@ -20,9 +20,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script type="text/javascript" src="/opt/option-data.js" charset="utf8"></script>
-    <script type="text/javascript" src="/inc/util.js" charset="utf8"></script>
     <script type="text/javascript" src="/bg/evtpage.js" charset="utf8"></script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
