--- a/src/opt/options.html
+++ b/src/opt/options.html
@@ -266,7 +266,7 @@
             		<label id="__oth_ipr1"></label>
             		<img id="configicon"></img>
             		<label id="__oth_ipr2"></label>
-            		<img id="moreicon"></img>
+            		<!--img id="moreicon"></img-->
             		<label id="__oth_ipr3"></label>
             	</label>
             </div>
