--- a/src/bg/evt.html
+++ b/src/bg/evt.html
@@ -1,4 +1,4 @@
-/*---------------------------------------------------------------------------------*
+<!---------------------------------------------------------------------------------*
  *                                                                                 *
  * This Source Code is subject to the Proprietary Software License.                *
  * You shall use it only in accordance with the terms of the license agreement.    *
@@ -10,13 +10,25 @@
  * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved                 *
  *                                                                                 *
  * IDENTIFICATION                                                                  *
- *     bg/bg.js                                                                    *
+ *     bg/evt.html                                                                 *
  *                                                                                 *
  * This file is part of search2 project                                            *
- * bg.js is the background service worker for search2                              *
+ * evt.html is the background checkview page for search2                           *
+ * this code is unavailable from manifest V3                                       *
  *                                                                                 *
- *---------------------------------------------------------------------------------*
-*/
+ *--------------------------------------------------------------------------------->
 
-import '/opt/opt-data.js'
-import '/bg/evt.js'
+<!--
+
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <script type="text/javascript" src="/opt/opt-data.js" charset="utf8"></script>
+    <script type="text/javascript" src="/bg/evt.js" charset="utf8"></script>
+</head>
+<body></body>
+</html>
+
+ -->
