--- a/src/mod/more-search-box.html
+++ b/src/mod/more-search-box.html
@@ -10,28 +10,28 @@
  * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved                 *
  *                                                                                 *
  * IDENTIFICATION                                                                  *
- *     more/more.html                                                              *
+ *     mod/more-search-box.html                                                    *
  *                                                                                 *
  * This file is part of search2 project                                            *
- * more.html is the HTML frame for search2 bar's more color box                    *
+ * this html is the frame page to show search2's more search box                   *
  *                                                                                 *
  *--------------------------------------------------------------------------------->
 
 <!DOCTYPE html>
 <html>
 <head>
-	<title>更多</title>
+	<title>more search</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<link href="more.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="../opt/option-data.js" charset="utf8"></script>
-	<script type="text/javascript" src="more.js"></script>
+	<link href="/mod/more-search-box.css" type="text/css" rel="stylesheet" />
+	<script type="text/javascript" src="/opt/opt-data.js" charset="utf8"></script>
+	<script type="text/javascript" src="/mod/more-search-box.js"></script>
 </head>
 <body>
 	<table id="search2_more">
 	<tbody>
 		<tr>
 			<td>
-				<input type="text" id="search2_more_searchInput" />
+				<input type="text" id="search2_more_searchBox" />
 			</td>
 		</tr>
 	</tbody>
