--- a/src/opt/opt.html
+++ b/src/opt/opt.html
@@ -10,7 +10,7 @@
  * Copyright (c) 2014-2025, wurenny@gmail.com, All rights reserved                 *
  *                                                                                 *
  * IDENTIFICATION                                                                  *
- *     opt/options.html                                                            *
+ *     opt/opt.html                                                                *
  *                                                                                 *
  * This file is part of search2 project                                            *
  * option page is the user configuration interface which provides as HTML          *
@@ -22,11 +22,13 @@
     <head>
         <title>Options</title>
         <meta http-equiv="content-type" content="text/html; charset=utf8" />
-        <link href="options.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="/opt/option-data.js" charset="utf8"></script>
-        <script type="text/javascript" src="/inc/comm.js" charset="utf8"></script>
+        <link href="opt.css" type="text/css" rel="stylesheet" />
+        <script type="text/javascript" src="/opt/opt-var.js" charset="utf8"></script>
+        <script type="text/javascript" src="/opt/opt-data.js" charset="utf8"></script>
+        <script type="text/javascript" src="/inc/proto.js" charset="utf8"></script>
         <script type="text/javascript" src="/inc/util.js" charset="utf8"></script>
-        <script type="text/javascript" src="/opt/options.js" charset="utf8"></script>
+        <script type="text/javascript" src="/inc/comm.js" charset="utf8"></script>
+        <script type="text/javascript" src="/opt/opt.js" charset="utf8"></script>
     </head>
     <body>
         <div id="main">
