--- a/src/opt/opt.html
+++ b/src/opt/opt.html
@@ -23,8 +23,9 @@
         <title>Options</title>
         <meta http-equiv="content-type" content="text/html; charset=utf8" />
         <link href="opt.css" type="text/css" rel="stylesheet" />
-        <script type="text/javascript" src="/opt/opt-var.js" charset="utf8"></script>
-        <script type="text/javascript" src="/opt/opt-data.js" charset="utf8"></script>
+        <script type="text/javascript" src="/opt/var.js" charset="utf8"></script>
+        <script type="text/javascript" src="/opt/data.js" charset="utf8"></script>
+        <script type="text/javascript" src="/opt/util.js" charset="utf8"></script>
         <script type="text/javascript" src="/inc/proto.js" charset="utf8"></script>
         <script type="text/javascript" src="/inc/util.js" charset="utf8"></script>
         <script type="text/javascript" src="/inc/comm.js" charset="utf8"></script>
@@ -190,23 +191,23 @@
                         		<tr>
                         			<td id="__op_search_form_url"></td>
                         			<td colspan="10">
-                        				<input id="att_url" type="text" size="105" disabled="disabled" />
+                        				<input id="att_url" type="text" size="117" disabled="disabled" />
                         				<img id="att_url_tip" name="minitipicon" class="minitipicon" ></img>
                         			</td>
                         		</tr>
                         		<tr>
-                        			<td id="__op_search_form_name"></td><td colspan="2"><input id="att_name" type="text" size="60" disabled="disabled" /></td>
+                        			<td id="__op_search_form_name"></td><td colspan="2"><input id="att_name" type="text" size="70" disabled="disabled" /></td>
                         			<td id="__op_search_form_tf"></td>
                         			<td>
-                        				<input id="att_tf" type="text" size="26" disabled="disabled" />
+                        				<input id="att_tf" type="text" size="32" disabled="disabled" />
                         				<img id="att_tf_tip" name="minitipicon" class="minitipicon" ></img>
                         			</td>
                         		</tr>
                         		<tr>
-                        			<td id="__op_search_form_icon"></td><td colspan="2"><input id="att_icon" type="text" size="60" disabled="disabled" /></td>
+                        			<td id="__op_search_form_icon"></td><td colspan="2"><input id="att_icon" type="text" size="70" disabled="disabled" /></td>
                         			<td id="__op_search_form_prkw"></td>
                         			<td>
-                        				<input id="att_prkw" type="text" size="26" disabled="disabled" />
+                        				<input id="att_prkw" type="text" size="32" disabled="disabled" />
                         				<img id="att_prkw_tip" name="minitipicon" class="minitipicon" ></img>
                         			</td>
                         		</tr>
@@ -269,8 +270,10 @@
             	<label id="footertxt">
             		<label id="__oth_ipr1"></label>
             		<img id="configicon"></img>
-            		<label id="__oth_ipr2"></label>
-            		<!--img id="moreicon"></img-->
+							<!--
+            		<label id="__oth_ipr2"></label>>
+            		<img id="moreicon"></img>
+							-->
             		<label id="__oth_ipr3"></label>
             	</label>
             </div>
